# cf-manager

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: API.md  TASK.md  UI-REFACTOR.md  UI-UX.md  需求1.md
scripts/: build-release.ps1
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/cloudflared/: binary.rs  command.rs
src-tauri/src/commands/: client.rs  config.rs  logs.rs  mod.rs  tunnel.rs  types.rs
src-tauri/src/tunnel/: download.rs  mod.rs
src/components/layout/: AppShell.tsx
src/components/ui/: Button.tsx  Dialog.tsx  Icon.tsx  StatusBadge.tsx
src/hooks/: useTunnel.ts
src/i18n/: I18nProvider.tsx  messages.ts
src/pages/: LogsPage.tsx  SettingsPage.tsx  TunnelsPage.tsx
src/services/: api.ts
src/theme/: ThemeProvider.tsx
src/types/: index.ts
