[package]
name = "cf-manager"
version = "1.2.0"
description = "Cloudflare Tunnel GUI Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "cf_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["blocking"] }

# 仅 macOS 需要：cloudflared 官方分发为 .tgz，需解压取出可执行文件
[target.'cfg(target_os = "macos")'.dependencies]
flate2 = "1"
tar = "0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
